--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     }
   },
   "scripts": {
-    "build": "tsup --clean src/index.ts src/client.ts && tsc --emitDeclarationOnly",
+    "build": "tsup --clean --external next --external react --external ethers --external wagmi src/index.ts src/client.ts && tsc --emitDeclarationOnly",
     "build:watch": "nodemon --exec \"pnpm build\""
   },
   "dependencies": {
@@ -29,12 +29,18 @@
     "uuid": "^8.3.2"
   },
   "peerDependencies": {
-    "next": "^12.1.6"
+    "ethers": "5.5.1",
+    "next": "^12.1.6",
+    "react": ">=16.8",
+    "react-dom": ">=16.8",
+    "wagmi": "^0.6.8"
   },
   "devDependencies": {
     "@types/node": "^17.0.12",
     "@types/react": "17.0.37",
+    "next": "^12.1.6",
     "tsup": "^6.2.3",
-    "typescript": "^4.6.3"
+    "typescript": "^4.6.3",
+    "wagmi": "^0.6.8"
   }
 }
